--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,1 +1,9 @@
+[defaults]
+inventory = ./hosts
+forks = 5
+remote_user = lanmiix
+host_key_checking = False
 
+[privilege_escalation]
+become = True
+become_method = sudo
